# local_llm_web_chatbot

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/frontend/: index.html  script.js
tests/: test_main.py
